Add basic css for blog
